Create shopping-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <app-header></app-header>
   <main>
     <app-recipe-book></app-recipe-book>
+    <app-shopping-list></app-shopping-list>
   </main>
 </div>
 
