--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,6 @@
     <app-recipe-book></app-recipe-book>
     <app-shopping-list></app-shopping-list>
   </main>
+  <app-footer></app-footer>
 </div>
 
