--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
-  <h1>Recipe Book</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="#" target="_blank" rel="noopener noreferrer" class="navbar-brand">
+      Recipe Book
+    </a>
+  </nav>
 </header>
