--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,21 @@
 <header>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
     <a href="#" target="_blank" rel="noopener noreferrer" class="navbar-brand">
       Recipe Book
     </a>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Recipes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shopping List</a>
+        </li>
+      </ul>
+    </div>
   </nav>
+
 </header>
