--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,8 +14,25 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Shopping List</a>
         </li>
+
       </ul>
+
     </div>
+
+    <ul class="nav navbar-nav justify-content-end">
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Manage
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Save Data</a>
+          <a class="dropdown-item" href="#">Fetch Data</a>
+        </div>
+      </li>
+
+    </ul>
+
   </nav>
 
 </header>
