--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <p class="copyright text-center">
+    Written and coded by <a href="https://mywebgraphicdesign.com" target="_blank" rel="noopener noreferrer">Anna Szałkiewicz</a>
+  </p>
+</footer>
