Use fixed-bottom class from bootstrap instead of css

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-  <p class="copyright text-center">
+  <p class="copyright text-center fixed-bottom">
     Written and coded by <a href="https://mywebgraphicdesign.com" target="_blank" rel="noopener noreferrer">Anna Szałkiewicz</a>
   </p>
 </footer>
