--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -1,4 +1,10 @@
-<p>
-  recipe-book works!
-</p>
-<app-recipe-list></app-recipe-list>
+<section id="recipes">
+  <div class="row">
+    <div class="col-xs-12 col-md-5">
+      <app-recipe-list></app-recipe-list>
+    </div>
+    <div class="col-xs-12 col-md-7">
+      <app-recipe-details></app-recipe-details>
+    </div>
+  </div>
+</section>
