--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -1,4 +1,21 @@
-<p>
-  recipe-list works!
-</p>
-<app-recipe-details></app-recipe-details>
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success">New Recipe</button>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12 list-group">
+    <a href="#" class="list-group-item clearfix">
+      <div class="flex">
+        <div>
+          <h2 class="mb-1">Recipe Name</h2>
+          <p class="mb-1">Description</p>
+        </div>
+        <div>
+          <img src="" alt="" class="img-fluid" style="height: 50px">
+        </div>
+      </div>
+    </a>
+    <app-recipe-details></app-recipe-details>
+  </div>
+</div>
