--- a/src/app/recipe-book/recipe-list/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-details/recipe-details.component.html
@@ -1,3 +1,20 @@
-<p>
-  recipe-details works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="card">
+      <img src="https://images.pexels.com/photos/806363/pexels-photo-806363.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="" class="card-img-top">
+      <div class="card-body">
+        <h2 class="card-title">Recipe Name</h2>
+        <div class="btn-group" role="group" aria-label="Button dropdown">
+          <button class="btn btn-primary dropdown-toggle" id="btnGroupDrop1" type="button" data-toggle="dropdown">Manage Recipe</button>
+          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <a class="dropdown-item" href="#">To Shopping List</a>
+            <a class="dropdown-item" href="#">Edit Recipe</a>
+            <a class="dropdown-item" href="#">Delete Recipe</a>
+          </div>
+        </div>
+        <div class="card-text">Description</div>
+        <div class="card-text">Ingredients</div>
+      </div>
+    </div>
+  </div>
+</div>
