Create shopping list template

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,11 @@
-<p>
-  shopping-list works!
-</p>
-<app-shopping-edit></app-shopping-edit>
+<div class="row">
+  <div class="col-xs-12">
+    <app-shopping-edit></app-shopping-edit>
+    <hr>
+    <ul class="list-group">
+      <li class="list-group-item" style="cursor: pointer;">
+        Buy it!
+      </li>
+    </ul>
+  </div>
+</div>
