--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,10 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
     <app-shopping-edit></app-shopping-edit>
-    <hr>
+    <hr />
     <ul class="list-group">
-      <li class="list-group-item" style="cursor: pointer;">
-        Buy it!
+      <li
+        class="list-group-item d-flex justify-content-between align-items-center"
+        style="cursor: pointer;"
+        *ngFor="let ingredient of ingredients"
+      >
+        {{ ingredient.name }}
+        <span>{{ ingredient.amount }}</span>
       </li>
     </ul>
   </div>
