--- a/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,16 @@
-<p>
-  recipe-item works!
-</p>
+<a href="#" class="list-group-item clearfix">
+  <div class="flex">
+    <div>
+      <h2 class="mb-1">{{ recipe.name }}</h2>
+      <p class="mb-1">{{ recipe.description }}</p>
+    </div>
+    <div>
+      <img
+        src="{{ recipe.imageUrl }}"
+        alt="{{ recipe.name }}"
+        class="img-fluid"
+        style="height: 50px;"
+      />
+    </div>
+  </div>
+</a>
