--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -6,25 +6,9 @@
 <hr>
 <div class="row">
   <div class="col-xs-12 list-group">
-    <a
-    href="#"
-    class="list-group-item clearfix"
-    *ngFor="let recipe of recipes"
-    >
-      <div class="flex">
-        <div>
-          <h2 class="mb-1">{{ recipe.name }}</h2>
-          <p class="mb-1">{{ recipe.description }}</p>
-        </div>
-        <div>
-          <img
-          src="{{ recipe.imageUrl }}"
-          alt="{{ recipe.name }}"
-          class="img-fluid"
-          style="height: 50px;" />
-        </div>
-      </div>
-    </a>
+    <app-recipe-item
+    *ngFor="let recipeElement of recipes"
+    [recipe]="recipeElement"
+    ></app-recipe-item>
   </div>
 </div>
-<app-recipe-item></app-recipe-item>
