--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -9,6 +9,7 @@
     <app-recipe-item
     *ngFor="let recipeElement of recipes"
     [recipe]="recipeElement"
+    (click)="onSelect()"
     ></app-recipe-item>
   </div>
 </div>
