--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -4,7 +4,7 @@
       <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-xs-12 col-md-7">
-      <app-recipe-details></app-recipe-details>
+      <app-recipe-details (selected)="onSelected($event)"></app-recipe-details>
     </div>
   </div>
 </section>
