--- a/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,7 @@
-<a href="#" class="list-group-item clearfix">
+<a
+href="#"
+class="list-group-item clearfix"
+(click)="onSelect()">
   <div class="flex">
     <div>
       <h2 class="mb-1">{{ recipe.name }}</h2>
