--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -4,7 +4,10 @@
       <app-recipe-list (selectedRecipe)="currentRecipe = $event"></app-recipe-list>
     </div>
     <div class="col-xs-12 col-md-7">
-      <app-recipe-details *ngIf="currentRecipe; else infoText" ></app-recipe-details>
+      <app-recipe-details
+      *ngIf="currentRecipe; else infoText"
+      [recipe]="currentRecipe"
+      ></app-recipe-details>
       <ng-template #infoText>Please select recipe!</ng-template>
     </div>
   </div>
