--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,12 +28,12 @@
     </div>
 
     <ul class="nav navbar-nav justify-content-end">
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" appDropdown>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
+          aria-expanded="true"  (click)="onClick()">
           Manage
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <div id="dropdown-nav" class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Save Data</a>
           <a class="dropdown-item" href="#">Fetch Data</a>
         </div>
