--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -1,12 +1,12 @@
 <section id="recipes">
   <div class="row">
     <div class="col-xs-12 col-md-5">
-      <app-recipe-list (selectedRecipe)="currentRecipe = $event"></app-recipe-list>
+      <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-xs-12 col-md-7">
       <app-recipe-details
-      *ngIf="currentRecipe; else infoText"
-      [recipe]="currentRecipe"
+      *ngIf="selectedRecipe; else infoText"
+      [recipe]="selectedRecipe"
       ></app-recipe-details>
       <ng-template #infoText>Please select recipe!</ng-template>
     </div>
