--- a/src/app/recipe-book/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-book/recipe-details/recipe-details.component.html
@@ -16,7 +16,7 @@
           id="dropdown-open"
           aria-labelledby="btnGroupDrop1"
           >
-            <a class="dropdown-item" href="#">To Shopping List</a>
+            <a class="dropdown-item" href="#" (click)="onAddToShoppingList()">To Shopping List</a>
             <a class="dropdown-item" href="#">Edit Recipe</a>
             <a class="dropdown-item" href="#">Delete Recipe</a>
           </div>
