--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <div class="container">
   <app-header (featureSelected)="onSelected($event)" ></app-header>
   <main>
-    <app-recipe-book *ngIf="loadedFeature === 'recipe'"></app-recipe-book>
-    <app-shopping-list *ngIf="loadedFeature === 'shopping-list'"></app-shopping-list>
+    <router-outlet></router-outlet>
   </main>
   <app-footer></app-footer>
 </div>
