--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,15 +11,13 @@
         <li class="nav-item active">
           <a
           class="nav-link"
-          href="#"
-          (click)="onSelect('recipe')"
+          [routerLink]="['/recipes']"
           >Recipes</a>
         </li>
         <li class="nav-item">
           <a
           class="nav-link"
-          href="#"
-          (click)="onSelect('shopping-list')"
+          [routerLink]="['/shopping-list']"
           >Shopping List</a>
         </li>
 
