--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,13 +8,19 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="nav-item active">
+        <li
+        class="nav-item"
+        [routerLinkActive]="['active']"
+        >
           <a
           class="nav-link"
           [routerLink]="['/recipes']"
           >Recipes</a>
         </li>
-        <li class="nav-item">
+        <li
+        class="nav-item"
+        [routerLinkActive]="['active']"
+        >
           <a
           class="nav-link"
           [routerLink]="['/shopping-list']"
