Remove href attributes to remove unwanted reload

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,13 +33,13 @@
 
     <ul class="nav navbar-nav justify-content-end">
       <li class="nav-item dropdown" appDropdown>
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+          <a class="nav-link dropdown-toggle" style="cursor: pointer" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="true"  (click)="onClick()">
           Manage
         </a>
         <div id="dropdown-nav" class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Save Data</a>
-          <a class="dropdown-item" href="#">Fetch Data</a>
+          <a class="dropdown-item" style="cursor: pointer">Save Data</a>
+          <a class="dropdown-item" style="cursor: pointer">Fetch Data</a>
         </div>
       </li>
 
