--- a/src/app/recipe-book/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-book/recipe-details/recipe-details.component.html
@@ -16,9 +16,9 @@
           id="dropdown-open"
           aria-labelledby="btnGroupDrop1"
           >
-            <a class="dropdown-item" href="#" (click)="onAddToShoppingList()">To Shopping List</a>
-            <a class="dropdown-item" href="#">Edit Recipe</a>
-            <a class="dropdown-item" href="#">Delete Recipe</a>
+            <a class="dropdown-item" style="cursor: pointer" (click)="onAddToShoppingList()">To Shopping List</a>
+            <a class="dropdown-item" style="cursor: pointer">Edit Recipe</a>
+            <a class="dropdown-item" style="cursor: pointer">Delete Recipe</a>
           </div>
         </div>
         <div class="card-text">{{ recipe.description }}</div>
