--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -4,11 +4,7 @@
       <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-xs-12 col-md-7">
-      <app-recipe-details
-      *ngIf="selectedRecipe; else infoText"
-      [recipe]="selectedRecipe"
-      ></app-recipe-details>
-      <ng-template #infoText>Please select recipe!</ng-template>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </section>
