--- a/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,7 @@
 <a
 class="list-group-item clearfix"
 [routerLink]="[recipe.id]"
+routerLinkActive="active"
 style="cursor: pointer">
   <div class="flex">
     <div>
