--- a/src/app/recipe-book/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-book/recipe-list/recipe-list.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
-<hr>
+<hr />
 <div class="row">
   <div class="col-xs-12 list-group">
     <app-recipe-item
-    *ngFor="let recipeElement of recipes"
-    [recipe]="recipeElement"
+      *ngFor="let recipeElement of recipes"
+      [recipe]="recipeElement"
     ></app-recipe-item>
   </div>
 </div>
