--- a/src/app/recipe-book/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-book/recipe-details/recipe-details.component.html
@@ -17,7 +17,7 @@
           aria-labelledby="btnGroupDrop1"
           >
             <a class="dropdown-item" style="cursor: pointer" (click)="onAddToShoppingList()">To Shopping List</a>
-            <a class="dropdown-item" style="cursor: pointer" [routerLink]="['edit']">Edit Recipe</a>
+            <a class="dropdown-item" style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
             <a class="dropdown-item" style="cursor: pointer">Delete Recipe</a>
           </div>
         </div>
