--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-header (featureSelected)="onSelected($event)" ></app-header>
+  <app-header></app-header>
   <main>
     <router-outlet></router-outlet>
   </main>
