--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form #f="ngForm" (ngSubmit)="onSubmit()" >
+    <form #f="ngForm" (ngSubmit)="onAdd()" >
       <div class="row">
         <div class="col-xs-8 form-group">
           <label for="name">Name</label>
@@ -32,7 +32,6 @@
           <button
           class="btn btn-success"
           type="submit"
-          (click)="onAdd()"
           >Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
