Add numbers 1 or greater to be valid

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -24,7 +24,9 @@
             ngModel
             required
             amount
-            #amount="ngModel">
+            #amount="ngModel"
+            pattern="[1-9]+[0-9]*$"
+            >
         </div>
       </div>
       <div class="row">
