--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,8 @@
       <li
         class="list-group-item d-flex justify-content-between align-items-center"
         style="cursor: pointer;"
-        *ngFor="let ingredient of ingredients"
+        *ngFor="let ingredient of ingredients; let i = index"
+        (click)="onEditItem(i)"
       >
         {{ ingredient.name }}
         <span>{{ ingredient.amount }}</span>
