--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -36,7 +36,10 @@
           type="submit"
           [disabled]="!f.valid"
           >{{ editMode ? 'Update' : 'Add' }}</button>
-          <button class="btn btn-danger" type="button">Delete</button>
+          <button
+          class="btn btn-danger"
+          type="button"
+          (click)="onDelete()">Delete</button>
           <button
           class="btn btn-primary"
           type="button"
