Display delete button if editMode is enabled

--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -39,7 +39,8 @@
           <button
           class="btn btn-danger"
           type="button"
-          (click)="onDelete()">Delete</button>
+          (click)="onDelete()"
+          *ngIf="editMode">Delete</button>
           <button
           class="btn btn-primary"
           type="button"
