--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,39 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-3">
+    <button type="submit" class="btn btn-success">Save</button>
+  </div>
+  <div class="col-xs-9">
+    <button class="btn btn-danger">Cancel</button>
+  </div>
+</div>
+<form>
+  <div class="form-group">
+    <label for="name">Recipe name:</label>
+    <input type="text" name="name" id="name" class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="imageUrl">Link to image:</label>
+    <input type="text" name="imageUrl" id="imageUrl" class="form-control">
+  </div>
+  <div class="row">
+    <img src="" alt="" class="img-fluid">
+  </div>
+  <div class="form-group">
+    <label for="description">Recipe name:</label>
+    <textarea name="description" id="description" rows="6" class="form-control"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="ingredient">Ingredients:</label>
+    <div class="row form-group">
+      <div class="col-8">
+        <input type="text" name="ingredient" id="ingredient" class="form-control">
+      </div>
+      <div class="col-2">
+        <input type="number" name="amount" id="amount" class="form-control">
+      </div>
+      <div class="col-2">
+        <button class="btn btn-danger" type="button">X</button>
+      </div>
+    </div>
+  </div>
+</form>
