--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -40,19 +40,29 @@
       formControlName="description"
     ></textarea>
   </div>
-  <div class="form-group">
+  <div class="form-group" formArrayName="ingredients">
     <label for="ingredient">Ingredients:</label>
-    <div class="row form-group">
-      <div class="col-8">
+    <div
+      class="row form-group"
+      *ngFor="let ingredientControl of getControls(); let i of index"
+      [formGroupName]="i">
+      <div
+        class="col-8">
         <input
           type="text"
           name="ingredient"
           id="ingredient"
           class="form-control"
+          formControlName="ingredientName"
         />
       </div>
       <div class="col-2">
-        <input type="number" name="amount" id="amount" class="form-control" />
+        <input
+          type="number"
+          name="amount"
+          id="amount"
+          class="form-control"
+          formControlName="ingredientAmount">
       </div>
       <div class="col-2">
         <button class="btn btn-danger" type="button">X</button>
