--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -68,7 +68,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <button class="btn btn-success">Add Ingredient</button>
+        <button class="btn btn-success" type="button" (click)="addIngredient()">Add Ingredient</button>
       </div>
     </div>
   </div>
