--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,7 +1,10 @@
 <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
   <div class="row">
     <div class="col-xs-3">
-      <button type="submit" class="btn btn-success">Save</button>
+      <button
+        type="submit"
+        class="btn btn-success"
+        [disabled]="!recipeForm.valid">Save</button>
     </div>
     <div class="col-xs-9">
       <button class="btn btn-danger">Cancel</button>
