--- a/src/app/recipe-book/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-book/recipe-details/recipe-details.component.html
@@ -18,7 +18,7 @@
           >
             <a class="dropdown-item" style="cursor: pointer" (click)="onAddToShoppingList()">To Shopping List</a>
             <a class="dropdown-item" style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a>
-            <a class="dropdown-item" style="cursor: pointer">Delete Recipe</a>
+            <a class="dropdown-item" style="cursor: pointer" (click)="onDeleteRecipe()">Delete Recipe</a>
           </div>
         </div>
         <div class="card-text">{{ recipe.description }}</div>
