--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -7,7 +7,10 @@
         [disabled]="!recipeForm.valid">Save</button>
     </div>
     <div class="col-xs-9">
-      <button class="btn btn-danger">Cancel</button>
+      <button
+        type="button"
+        class="btn btn-danger"
+        (click)="onCancel()">Cancel</button>
     </div>
   </div>
   <div class="form-group">
@@ -44,7 +47,7 @@
     ></textarea>
   </div>
   <div class="form-group" formArrayName="ingredients">
-    <label for="ingredient">Ingredients:</label>
+    <!-- <label for="ingredient">Ingredients:</label> -->
     <div
       class="row form-group"
       *ngFor="let ingredientControl of getControls(); let i = index"
@@ -53,7 +56,6 @@
       <div class="col-8">
         <input
           type="text"
-          id="ingredient"
           class="form-control"
           formControlName="ingredientName"
         >
