--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.css
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.css
@@ -2,3 +2,8 @@ input.ng-invalid.ng-touched,
 textarea.ng-invalid.ng-touched {
   border: solid 2px red;
 }
+.image-preview {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
