--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -69,7 +69,10 @@
         >
       </div>
       <div class="col-2">
-        <button class="btn btn-danger" type="button">X</button>
+        <button
+          class="btn btn-danger"
+          type="button"
+          (click)="onDeleteIngredient(i)">X</button>
       </div>
     </div>
     <div class="row">
