--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,7 @@
         </a>
         <div id="dropdown-nav" class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" style="cursor: pointer" (click)="onSaveData()">Save Data</a>
-          <a class="dropdown-item" style="cursor: pointer">Fetch Data</a>
+          <a class="dropdown-item" style="cursor: pointer" (click)="onFetchData()">Fetch Data</a>
         </div>
       </li>
 
