--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,18 @@
-
+<div class="row justify-content-center">
+  <div class="col-xs-12 col-md-6">
+    <form>
+      <div class="form-group">
+        <label for="email">E-mail</label>
+        <input class="form-control" type="email" name="email" id="email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" class="form-control">
+      </div>
+      <div class="form-group">
+        <input type="button" value="Sign up" class="btn btn-primary">
+        <input type="button" value="Switch to login" class="btn btn-primary">
+      </div>
+    </form>
+  </div>
+</div>
