--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,15 @@
         >
           <a
           class="nav-link"
+          [routerLink]="['/auth']"
+          >Authenticate</a>
+        </li>
+        <li
+        class="nav-item"
+        [routerLinkActive]="['active']"
+        >
+          <a
+          class="nav-link"
           [routerLink]="['/shopping-list']"
           >Shopping List</a>
         </li>
