--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -10,8 +10,8 @@
         <input type="password" name="password" id="password" class="form-control">
       </div>
       <div class="form-group">
-        <input type="button" value="Sign up" class="btn btn-primary">
-        <input type="button" value="Switch to login" class="btn btn-primary">
+        <input type="submit" value="{{ isLogin ? 'Log in' : 'Sign up' }}" class="btn btn-primary">
+        <input type="button" (click)="onSwitchMode()" value="{{ isLogin ? 'Switch to signup' : 'Switch to login' }}" class="btn btn-primary">
       </div>
     </form>
   </div>
