--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,17 +1,44 @@
 <div class="row justify-content-center">
   <div class="col-xs-12 col-md-6">
-    <form>
+    <form #authForm="ngForm">
       <div class="form-group">
         <label for="email">E-mail</label>
-        <input class="form-control" type="email" name="email" id="email">
+        <input
+          class="form-control"
+          type="email"
+          name="email"
+          id="email"
+          ngModel
+          name="email"
+          required
+          email />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="form-control">
+        <input
+          type="password"
+          name="password"
+          id="password"
+          class="form-control"
+          ngModel
+          name="password"
+          required
+          minlength="6"
+        />
       </div>
       <div class="form-group">
-        <input type="submit" value="{{ isLogin ? 'Log in' : 'Sign up' }}" class="btn btn-primary">
-        <input type="button" (click)="onSwitchMode()" value="{{ isLogin ? 'Switch to signup' : 'Switch to login' }}" class="btn btn-primary">
+        <input
+          type="submit"
+          value="{{ isLogin ? 'Log in' : 'Sign up' }}"
+          class="btn btn-primary"
+          [disabled]="!authForm.valid"
+        />
+        <input
+          type="button"
+          (click)="onSwitchMode()"
+          value="{{ isLogin ? 'Switch to signup' : 'Switch to login' }}"
+          class="btn btn-primary"
+        />
       </div>
     </form>
   </div>
