--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col-xs-12 col-md-6">
-    <form #authForm="ngForm">
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
       <div class="form-group">
         <label for="email">E-mail</label>
         <input
@@ -26,7 +26,7 @@
           minlength="6"
         />
       </div>
-      <div class="form-group">
+      <div>
         <input
           type="submit"
           value="{{ isLogin ? 'Log in' : 'Sign up' }}"
